fixed gradle and firebase issues